# ssp-toolkit

./: .pre-commit-config.yaml  README.md  file_hashes.json  pyproject.toml
project_files/: README.md
project_files/documentation/: components.md  config.md  create-files.md  create-matrix.md  export-to.md  make-families.md  make-ssp.md  opencontrol.md  sop.md
rendered/appendices/: contingency-plan.md  laws-regulations.md  privacy-impact-assessment.md  risk-management.md  security-irp-checklist.md  security-irp.md  system-continuity-plan.md
rendered/components/Contractor/: SC-SYSTEM_AND_COMMUNICATIONS_PROTECTION.yaml
rendered/components/Ilias/: AU-AUDIT_AND_ACCOUNTABILITY.yaml
rendered/docs/: ssp.md
rendered/docs/controls/: AC.md  AP.md  AR.md  AT.md  AU.md  CA.md  CM.md  CP.md  DI.md  DM.md  IA.md  IP.md  IR.md  MA.md  MP.md  PE.md  PL.md  PS.md  RA.md  SA.md  SC.md  SE.md  SI.md  TR.md  UL.md
src/tools/: cli.py  config.py  creat_matrix.py  create_files.py  create_matrix.py  create_project.py  export_to.py  load_project.py  logging_config.py  make_families.py  make_ssp.py  sop.py
src/tools/helpers/: config.py  family.py  hash_checker.py  helpers.py  opencontrol.py  project.py  secrender.py  ssp.py  ssptoolkit.py
templates/components/Contractor/: AU-AUDIT_AND_ACCOUNTABILITY.yaml
templates/components/Project/: AC-ACCESS_CONTROL.yaml  AT-AWARENESS_AND_TRAINING.yaml
